# Homework-intro-to-OOP

./: .flake8  README.md  decomposition.txt  main.py  pyproject.toml
src/: categories.py  lawngrass.py  products.py  products_iterator.py  smartphone.py  utils.py
tests/: conftest.py  test_categories.py  test_lawngrass.py  test_products.py  test_smartphone.py
